--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- $Id$ -->
+<!--
+Copyright 2008 Ryan Berdeen.
 
-<project>
+This file is part of Veneer.
+
+Veneer is free software: you can redistribute it and/or modify it
+under the terms of the GNU Lesser General Public License as published
+by the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+Veneer is distributed in the hope that it will be useful, but WITHOUT
+ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
+License for more details.
+
+You should have received a copy of the GNU Lesser General Public
+License along with Veneer.  If not, see <http://www.gnu.org/licenses/>.
+-->
+
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.ryanberdeen</groupId>
+	<groupId>com.ryanberdeen.veneer</groupId>
 	<artifactId>veneer-spring</artifactId>
 	<packaging>jar</packaging>
 	<name>veneer-spring</name>
 	<version>0.1-SNAPSHOT</version>
+	
+	<licenses>
+		<license>
+			<name>GNU General Public License</name>
+			<url>http://www.gnu.org/licenses/gpl.txt</url>
+		</license>
+		<license>
+			<name>GNU Lesser General Public License</name>
+			<url>http://www.gnu.org/licenses/lgpl.txt</url>
+		</license>
+	</licenses>
+	
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -22,6 +53,7 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	
 	<dependencies>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -30,7 +62,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.ryanberdeen</groupId>
+			<groupId>com.ryanberdeen.veneer</groupId>
 			<artifactId>veneer</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
